tests/ui/duplicate.stderr
error: duplicate #[optional] attribute
 --> $DIR/duplicate.rs:9:9
  |
9 |         #[optional]
  |         ^^^^^^^^^^^

error: duplicate #[tag] attribute
  --> $DIR/duplicate.rs:17:9
   |
17 |         #[tag = 2]
   |         ^^^^^^^^^^

error: duplicate #[untagged] attribute
  --> $DIR/duplicate.rs:23:5
   |
23 |     #[untagged]
   |     ^^^^^^^^^^^

error: duplicate #[flatten] attribute
  --> $DIR/duplicate.rs:29:9
   |
29 |         #[flatten]
   |         ^^^^^^^^^^

error: duplicate #[optional] attribute
  --> $DIR/duplicate.rs:40:9
   |
40 |         #[optional]
   |         ^^^^^^^^^^^

error: duplicate #[tag] attribute
  --> $DIR/duplicate.rs:48:9
   |
48 |         #[tag = 2]
   |         ^^^^^^^^^^

error: duplicate #[untagged] attribute
  --> $DIR/duplicate.rs:54:5
   |
54 |     #[untagged]
   |     ^^^^^^^^^^^

error: duplicate #[flatten] attribute
  --> $DIR/duplicate.rs:60:9
   |
60 |         #[flatten]
   |         ^^^^^^^^^^
